test/invalid/baseline/module.txt
Syntax error at line 4, since `module gfx`:
  module geom {
  ^ Missing return type
